--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,58 @@
-body{
-    background-image: url('../image/homeImg.jpg');
-    background-repeat: no-repeat;
-    background-size: cover ;
-    display: flex;
-    flex-wrap: wrap;
+.carousel,
+.carousel-item,
+.carousel-item img {
+  height: 100vh;
+  object-fit: cover; 
 }
 
-header{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5); 
+  z-index: 1;
+}
+
+.navbar {
+  background-color: rgba(0, 0, 0, 0.4) !important;
+  z-index: 3;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.navbar-nav .nav-link {
+  margin-left: 2rem; 
+  margin-right: 2rem; /
+}
+
+.navbar-nav .nav-link:first-child {
+  margin-left: 0;
+}
+
+.content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  color: white;
+  text-align: center;
+}
+
+
+
+.carousel-item img {
+  height: 100vh;
+  object-fit: cover;
+  object-position: center top; 
+}
+
+
+.highlights-section {
+  background-color: #0a0a0a; 
+  background-image: linear-gradient(180deg, #000000 0%, #0e0d0d 100%); 
 }
